# ansibleConfigGenerator

./: .gitattributes  .gitignore  LICENSE  Makefile.am  Readme.md  ReadmeEN.md  autogen.sh  configure.ac  requirements.txt
.github/workflows/: release.yml
Dockerfiles/: Makefile.am  deb.ubuntu24.04.Dockerfile  entrypoint-deb.sh  entrypoint-rpm.sh  rpm.almalinux9.Dockerfile
compl/: Makefile.am
config/: Makefile.am  genAnsibleConf.system-config.yaml  genAnsibleConf.user-config.yaml  sample-network_topology.yaml
debian/: ansibleconfiggenerator.install  changelog  control  copyright  rules
design/prototype/: program-structure-draft.md
docs/: Makefile.am  SPECIFICATION.md  commands-specJP.md
docs/debug/: Makefile.am
docs/debug/vscode/: Makefile.am  Readme.md  launch.json  settings.json
docs/manual/: ansible-role-author-guide.md  convert-rule-config-reference.md  field-metadata-reference.md  generate-host-vars-files.md  generate-host-vars-structured.md  generate-hostvars-matrix.md  generate-network-topology-design-sheet.md  generate-terraform-tfvars.md  generate_host_vars_structured.md  index.md  schema-files-reference.md  toolchain-overview.md  troubleshooting.md  user-guide-linux-ansible-setup.md  validate-hostvars-matrix.md
docs/sphinx/: Makefile.am  conf.py  index.rst
docs/sphinx/_static/: README
docs/sphinx/_templates/: README
docs/sphinx/tst_framework/: index.rst  low_level_interfaces.rst  test_common_cleanup.rst  test_common_config.rst  test_common_hosts.rst  test_common_json.rst  test_common_local.rst  test_common_logs.rst  test_common_paths.rst  test_common_runner.rst  test_common_snapshot.rst  test_common_ssh.rst  types_constants.rst
po/: Makevars  POTFILES.in  PROJECT_NAME.pot  ansibleConfigGenerator.pot  en.po  ja.po
rpm/: ansibleConfigGenerator.spec
scripts/: Makefile.am
src/: Makefile.am
src/genAnsibleConf/: Makefile.am  __init__.py  compare_hostvars_role_scoped.py  convert-rule-config.yaml  field_metadata.schema.yaml  field_metadata.yaml  generate_host_vars_files  generate_host_vars_files.py  generate_host_vars_structured  generate_host_vars_structured.py  generate_hostvars_matrix  generate_hostvars_matrix.py  generate_network_topology_design_sheet  generate_network_topology_design_sheet.py  generate_terraform_tfvars  generate_terraform_tfvars.py  host_vars_structured.schema.yaml  network_topology.schema.yaml  type_schema.yaml  validate_hostvars_matrix  validate_hostvars_matrix.py
src/genAnsibleConf/cli/: __init__.py  generate_host_vars_files.py  generate_host_vars_structured.py  generate_hostvars_matrix.py  generate_network_topology_design_sheet.py  generate_terraform_tfvars.py  validate_hostvars_matrix.py
src/genAnsibleConf/lib/: __init__.py  cli_defaults.py  cluster_platform.py  global_params.py  hostvars_node_pipeline.py  hostvars_runtime_context.py  k8s_cluster_platform.py  k8s_neighbor.py  k8s_normalize.py  neighbor_provider.py  netif_builder.py  network_core.py  network_role_policy.py  node_topology_utils.py  routing_frr.py  service_processing.py  service_rules.py  supply_map.py  user_merge.py  yaml_io.py
tests/: Makefile.am
tests/mt/: Makefile.am  test_test_common_cleanup.py  test_test_common_config.py
tests/tests_py/: __init__.py  _local_types.py  asserts.py  constants.py  test_auto_service_config_injection.py  test_cli_defaults_schema_resolution.py  test_common_cleanup.py  test_common_config.py  test_common_hosts.py  test_common_json.py  test_common_local.py  test_common_logs.py  test_common_paths.py  test_common_runner.py  test_common_snapshot.py  test_common_ssh.py  test_compare_hostvars_role_scoped_cli.py  test_generate_network_topology_design_sheet.py  test_generate_terraform_tfvars_behavior.py  test_internal_network_list_merge.py  test_k8s_cluster_platform.py  test_k8s_normalize.py  test_netif_builder.py  test_network_role_policy.py  test_prototype_generators.py  test_prototype_node_topology_utils.py  test_prototype_yaml_io.py  test_routing_frr.py  test_service_settings_to_scalars_rules.py  test_service_transform_rules.py
