# -*- mode: makefile; coding: utf-8; line-endings: unix -*-
# SPDX-License-Identifier: BSD-2-Clause
# Copyright (c) 2026 Takeharu KATO
#
# This file is distributed under the two-clause BSD license.
# For the full text of the license, see the LICENSE file in the project root directory.
# このファイルは2条項BSDライセンスの下で配布されています。
# ライセンス全文はプロジェクト直下の LICENSE を参照してください。
#
# OpenAI's ChatGPT partially generated this code.
# Author has modified some parts.
# OpenAIのChatGPTがこのコードの一部を生成しました。
# 著者が修正している部分があります。
#
## config/Makefile.am - Configuration files directory

## プロジェクト固有の設定ファイルサンプルをここに追加する

## 配布アーカイブに含めるファイル（プレースホルダー）
EXTRA_DIST = \
	genAnsibleConf.system-config.yaml \
	genAnsibleConf.user-config.yaml
